--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -259,12 +259,12 @@ body {
 // `.mw-page-container` because that will cut off the sidebar. Therefore, we
 // calculate the maximum distance from the start of `mw-page-container` to the
 // start of the sidebar.
-#mw-sidebar-checkbox:not( :checked ) ~ .mw-workspace-container .mw-sidebar {
+#mw-sidebar-checkbox:not( :checked ) ~ .mw-page-container .mw-workspace-container .mw-sidebar {
 	.transform( translateX( -( @max-width-page-container - @max-width-workspace-container ) / 2 ) );
 }
 
 // Hide sidebar entirely when the checkbox is disabled and the TOC is enabled
-.vector-toc-enabled #mw-sidebar-checkbox:not( :checked ) ~ .mw-workspace-container .mw-sidebar {
+.vector-toc-enabled #mw-sidebar-checkbox:not( :checked ) ~ .mw-page-container .mw-workspace-container .mw-sidebar {
 	display: none;
 }
 
@@ -277,7 +277,7 @@ body {
 }
 
 // Adjusts the content when sidebar is open regardless of the viewport width.
-.mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-content-container {
+.mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-content-container {
 	// For container logic specific to special pages and history pages.
 	.skin-vector-disable-max-width & {
 		margin-left: @margin-start-content;
@@ -285,7 +285,7 @@ body {
 }
 
 // Increase margin when TOC is enabled
-.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-content-container {
+.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-content-container {
 	.skin-vector-disable-max-width & {
 		margin-left: @margin-toc-start-content;
 	}
@@ -293,14 +293,14 @@ body {
 
 @media ( max-width: @max-width-margin-start-content ) {
 	// Adjusts the content and mw-article-toolbar-container.
-	.mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-content-container,
-	.mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-article-toolbar-container {
+	.mw-checkbox-hack-checkbox:checked ~ .mw-page-container  .mw-workspace-container .mw-content-container,
+	.mw-checkbox-hack-checkbox:checked ~ .mw-page-container  .mw-workspace-container .mw-article-toolbar-container {
 		margin-left: @margin-start-content;
 	}
 
 	// Increase margin when TOC is enabled
-	.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-content-container,
-	.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-article-toolbar-container {
+	.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-content-container,
+	.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-article-toolbar-container {
 		margin-left: @margin-toc-start-content;
 	}
 
@@ -315,13 +315,13 @@ body {
 // TOC is visible and when TOC is enabled and the sidebar is open
 .vector-toc-visible .mw-workspace-container .mw-content-container,
 .vector-toc-visible .mw-workspace-container .mw-article-toolbar-container,
-.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-content-container,
-.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container .mw-article-toolbar-container {
+.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-content-container,
+.vector-toc-enabled .mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container .mw-article-toolbar-container {
 	margin-left: @margin-toc-start-content;
 }
 
 // Prevent center align when TOC is visible
-.vector-toc-visible .mw-workspace-container {
+.vector-toc-visible ~ .mw-page-container .mw-workspace-container {
 	margin-left: initial;
 }
 
@@ -336,7 +336,7 @@ body {
  * Makes the sidebar full screen at lower resolutions.
  */
 @media ( max-width: @width-breakpoint-tablet ) {
-	.mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container {
+	.mw-checkbox-hack-checkbox:checked ~ .mw-page-container .mw-workspace-container {
 		#mw-panel {
 			width: 100%;
 			position: relative;
